Fix IE8 overflow bug with the new compacted comment

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -198,6 +198,7 @@ form .upload_area
         display: inline
       p
         margin: 8px 0
+      overflow: hidden
   .mention
     padding: 0 3px
     background-color: #eee
